Changes in version 1.5 (... 2008)

 - ISceneNode::setParent and addChild now updates node SceneManager pointers if the node was from another SceneManager.

 - Basic support for joystick input events on Windows, Linux and SDL devices.

 - Major API change: RTTs are now created via addRenderTargetTexture instead of createRenderTargetTexture, which allows to retrieve them from the texture cache, but also changes the way of removing the RTTs, and especially one must not drop the pointer anymore.
 
 - WindowsCE-Bugfix

 - isBetweenPoints return true now even for the begin and end points, i.e. line segments are now including their start and end.

 - Fix XML reader creation for non-existing files and invalid callbacks.

 - Avoid loading textures which are not used by the mesh in b3d loader.

 - Added scaleTCoords methods to MeshManipulator

 - Enable use of other meshes for shadow mesh generation, can be used to speed up shadow generation and rendering for complex meshes. Patch based on a version by tonic.

 - Fixed usage of SIrrCreationParameters struct, which dind't have copy constructor and assignment operator anymore, since the Irrlicht version string was made const.

 - New glext.h (version 41) and glxext.h (version 20) supporting OpenGL 3.0

 - Added support for read-only locking of textures. Can speed up those calls.

 - Added support for locking RTTs under OpenGL.

 - Implementation of UserData events from system events.

 - ICameraSceneNode::setIsOrthogonal replaced by a parameter to setProjectionMatrix.

 - All meshbuffers are now dynamically allocated to avoid problems with grabbed buffers, which may be deleted before the last drop happens (due to static memory allocation).

 - Enhanced scene graph traversal with example from rogerborg.

 - FPS camera disabling of event receiver works better now.

 - scene deserialization allows for a user defined callback after a new scene node is created.

 - Fixed tangent mesh loading from .irrmesh files.
